3 make sauces controller (#34)
* Added SauceTypeRequest

* Added fillable name to SauceType

* Added SauceTypeController

* Added SauceType routes

* Added SauceTypeController documentation

* Change sauces documentation from sauce-types to saucetypes
